--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <title>React App</title>
+  <meta name="description" content="This website is for a bakery
+  He works in pastries, biscuits, sweets, and all high-level pastries. We are honored to have you in your place" />
+  <link rel="icon" href="%PUBLIC_URL%/Since.png" />
 </head>
 
 <body>
